--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
 </head>
 
@@ -20,23 +21,43 @@
 
     <!-- connects to the server and displays results -->
     <h1 class="h3 ab-3 font-weight-normal">Lets Chat</h1>
-    <div class="container" id="chat">
-        <div id="chat-window">
+    <div class="container">
+        <div id="chat">
             <div id="output"></div>
-            <div id= "typing"></div>
+            <div id="typing"></div>
         </div>
-
-        <input id="handle" type="text" placeholder="name" />
-        <input id="message" type="text" placeholder="message" />
-        <button id="submit">Send</button>
+    </div>
+    <div class="container">
+        <input id="handle" type="text" class="form-control" placeholder="name" required autofocus />
+        <input id="message" type="text" class="form-control" placeholder="enter a message" required />
+        <button id="submit" class="btn btn-lg btn-primary btn-block" type="submit">Send</button>
 
     </div>
 
+    <hr>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                remote
+                <video id="rVideo" autoplay="autplay">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                local
+                <video id="lVideo" autoplay="autplay" muted>
+            </div>
+        </div>
+        <span id = "displayId"></span>
+        <input id="connId" type="text" class="form-control" placeholder="enter a connection id" required>
+        <button id="conn_button" class="btn btn-lg btn-success btn-block" type="submit">Connet</button>
+        <button id="call_button" class="btn btn-lg btn-danger btn-block" type="submit">Call</button>
+
+    </div>
 
     <!-- <script src="http://localhost:3000/socket.io/socket.io.js" async defer></script> -->
 
-    <!-- <script src="socket.io/socket.io.js"></script>  -->
-    <!-- <script src="/socket.io/socket.io.js"></script> -->
+    <script src="socket.io/socket.io.js"></script>
+    <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+
     <script src="/client.js"></script>
     <!-- <script>
             var socket = io();
