--- a/test.html
+++ b/test.html
@@ -48,7 +48,7 @@
         </div>
         <span id = "displayId"></span>
         <input id="connId" type="text" class="form-control" placeholder="enter a connection id" required>
-        <button id="conn_button" class="btn btn-lg btn-success btn-block" type="submit">Connet</button>
+        <button id="conn_button" class="btn btn-lg btn-success btn-block" type="submit">Connect</button>
         <button id="call_button" class="btn btn-lg btn-danger btn-block" type="submit">Call</button>
 
     </div>
@@ -56,8 +56,9 @@
     <!-- <script src="http://localhost:3000/socket.io/socket.io.js" async defer></script> -->
 
     <script src="socket.io/socket.io.js"></script>
+    <!-- <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script> -->
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-
+    <!-- https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js -->
     <script src="/client.js"></script>
     <!-- <script>
             var socket = io();
