--- a/test.html
+++ b/test.html
@@ -18,58 +18,93 @@
 </head>
 
 <body>
+    <h1 class="h3 ab-3 font-weight-normal">Lets Chat</h1>
     <div class="container">
-
-        <!-- connects to the server and displays results -->
-        <h1 class="h3 ab-3 font-weight-normal">Lets Chat</h1>
-        <div class="container">
-            <div id="chat">
-                <div id="output"></div>
-                <div id="typing"></div>
+        <div id="Upper" style="display: none;">
+            <div class="row">
+                <div class="col col-sm-6 col-lg-6">
+                    remote
+                    <video id="rVideo" style="width: 100%; height: auto;" autoplay="autplay">
+                </div>
+                <div class="col-12 col-sm-6 col-lg-6">
+                    local
+                    <video id="lVideo" style="width: 100%; height: auto;" autoplay="autplay" muted>
+                </div>
+            </div>
+            <hr>
+            <div class="row justify-content-center">
+                <div class="col col-sm-6 col-md-4 col-lg-4">
+                    <span id="displayId"></span>
+                    <input id="connId" type="text" class="form-control" placeholder="enter a connection id" required>
+                    <br>
+                    <div class="row justify-content-center">
+                        <div class="col-12">
+                            <button id="conn_button" class="btn btn-lg btn-success btn-block"
+                                type="submit">Connect</button>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6">
+                            <button id="call_button" class="btn btn-lg btn-success btn-block"
+                                type="submit">Call</button>
+                        </div>
+                        <div class="col-6">
+                            <button id="end_button" class="btn btn-lg btn-danger btn-block" type="submit">End</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <!-- connects to the server and displays results -->
+
+        <!-- <form action="" onsubmit="javascript:void(0)"> -->
         <div class="row justify-content-center">
-            <div class="col col-sm-6 col-md-4 col-lg-4">
+            <div class="col col-sm-8 col-md-8 col-lg-8">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                        <!-- <div class="container"> -->
+                        <div id="chat" style="max-height: 300px; overflow-y: auto;transform: rotate(180deg);
+                        direction:rtl;">
+                            <div id="output" style="overflow: hidden;
+                            transform: rotate(180deg);"></div>
+                            <div id="typing"></div>
+                        </div>
+                        <!-- </div> -->
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-auto">
+                        <label class="sr-only" for="handle">Name</label>
+                        <input type="text" class="form-control mb-2" id="handle" placeholder="Name">
+                    </div>
+                    <div class="col-auto">
+                        <label class="sr-only" for="message">Message</label>
+                        <input type="text" class="form-control mb-2" id="message" placeholder="Enter your message...">
+                    </div>
+                    <div class="col-auto">
+                        <button id="submit" type="submit" class="btn btn-primary mb-2">Send</button>
+                    </div>
+                    <div class="col-auto">
+                        <button id="triggerBtn" onclick="showHidden()" type="submit" class="btn btn-success mb-2">Video
+                            On</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- </form> -->
+        <!-- <div class="col col-sm-6 col-md-4 col-lg-4">
                 <input id="handle" type="text" class="form-control" placeholder="name" required autofocus />
                 <input id="message" type="text" class="form-control" placeholder="enter a message" required />
                 <button id="submit" class="btn btn-lg btn-primary btn-block" type="submit">Send</button>
-            </div>
-        </div>
+            </div> -->
+
 
         <hr>
 
-        <div class="row">
-            <div class="col col-sm-6 col-lg-6">
-                remote
-                <video id="rVideo" style="width: 100%; height: auto;" autoplay="autplay">
-            </div>
-            <div class="col-12 col-sm-6 col-lg-6">
-                local
-                <video id="lVideo" style="width: 100%; height: auto;" autoplay="autplay" muted>
-            </div>
-        </div>
-        <hr>
-        <div class="row justify-content-center">
-            <div class="col col-sm-6 col-md-4 col-lg-4">
-                <span id="displayId"></span>
-                <input id="connId" type="text" class="form-control" placeholder="enter a connection id" required>
-                <br>
-                <div class="row justify-content-center">
-                    <div class="col-12">
-                        <button id="conn_button" class="btn btn-lg btn-success btn-block" type="submit">Connect</button>
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-6">
-                        <button id="call_button" class="btn btn-lg btn-success btn-block" type="submit">Call</button>
-                    </div>
-                    <div class="col-6">
-                        <button id="call_button" class="btn btn-lg btn-danger btn-block" type="submit">End</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+
         <footer class="container mt-4">
             <div class="row">
                 <div class="col">
@@ -81,6 +116,26 @@
 
     <!-- <script src="http://localhost:3000/socket.io/socket.io.js" async defer></script> -->
 
+    <script>
+
+        const showHidden = (event) => {
+            let elem = document.getElementById('Upper'); triggerBtn
+            let button = document.getElementById('triggerBtn');
+            console.log(event)
+            console.log(elem.style.display === 'none')
+            if (elem.style.display === 'none') {
+                elem.style = "display: block;";
+                button.classList.add('bg-danger');
+                button.innerHTML = 'Video Off';
+            } else {
+                elem.style = "display: none;";
+                button.classList.remove('bg-danger');
+                button.classList.add('bg-success');
+                button.innerHTML = 'Video On';
+            }
+        }
+
+    </script>
     <script src="socket.io/socket.io.js"></script>
     <!-- <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script> -->
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
