--- a/test.html
+++ b/test.html
@@ -49,7 +49,7 @@
                             <button id="call_button" class="btn btn-lg btn-success btn-block"
                                 type="submit">Call</button>
                         </div>
-                        <div class="col-6">
+                        <div class="col-6 mb-4">
                             <button id="end_button" class="btn btn-lg btn-danger btn-block" type="submit">End</button>
                         </div>
                     </div>
@@ -58,12 +58,13 @@
         </div>
 
         <!-- connects to the server and displays results -->
-
+        <hr> 
         <!-- <form action="" onsubmit="javascript:void(0)"> -->
         <div class="row justify-content-center">
+         <!--   <span class="border border-primary ml-4 mr-4 mt-4 mb-4"> -->
             <div class="col col-sm-8 col-md-8 col-lg-8">
                 <div class="row">
-                    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="col-14 col-sm-12 col-md-12 col-lg-12">
                         <!-- <div class="container"> -->
                         <div id="chat" style="max-height: 300px; overflow-y: auto;transform: rotate(180deg);
                         direction:rtl;">
@@ -92,7 +93,7 @@
                     </div>
                 </div>
             </div>
-
+      <!-- </span>-->
         </div>
         <!-- </form> -->
         <!-- <div class="col col-sm-6 col-md-4 col-lg-4">
